<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DefibrilatorAddActivity">

    <EditText
        android:id="@+id/et_telefonskaStevilka"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:textSize="16dp"
        android:focusable="true"
        android:hint="@string/s_telefonskaStevilka"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_znamkaAed"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:focusable="true"
        android:ems="10"
        android:textSize="16dp"
        android:padding="10dp"
        android:hint="@string/s_znamkaAED"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_telefonskaStevilka" />

    <EditText
        android:id="@+id/et_idStevilkaAed"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:focusable="true"
        android:ems="10"
        android:textSize="16dp"
        android:padding="10dp"
        android:hint="@string/s_idStevilkaAed"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_znamkaAed" />

    <EditText
        android:id="@+id/et_lokacijaAed"
        android:layout_width="300dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:focusable="true"
        android:ems="10"
        android:textSize="16dp"
        android:padding="10dp"
        android:hint="@string/s_lokacijaAed"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_idStevilkaAed" />

    <EditText
        android:id="@+id/et_imeObjekta"
        android:layout_width="300dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:focusable="true"
        android:ems="10"
        android:textSize="16dp"
        android:padding="10dp"
        android:hint="@string/s_imeObjekta"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_lokacijaAed" />

    <EditText
        android:id="@+id/et_opisLokacijeAed"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:focusable="true"
        android:autofillHints=""
        android:ems="10"
        android:textSize="16dp"
        android:padding="10dp"
        android:hint="@string/s_opisLokacije"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_imeObjekta" />

    <ImageView
        android:id="@+id/img_aed"
        android:src="@drawable/ic_launcher_background"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_dodajSlikoAed"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_opisLokacijeAed" />

    <TextView
        android:id="@+id/tv_dodajSlikoAed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/s_slikaAedNaprave"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_opisLokacijeAed" />

    <Button
        android:id="@+id/btn_dodajAed"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/style_rounded_button_1"
        android:text="@string/s_dodaj"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dodajSlikoAed" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:animateLayoutChanges="true"
        android:background="@android:color/black"
        android:clickable="true"
        android:visibility="gone"
        android:focusable="true">

        <ProgressBar
            android:id="@+id/progress_bar_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:progress="25"
            style="?android:attr/progressBarStyleLarge"
            android:layout_gravity="center" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>