<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_dialog_moreInfo_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="20dp"
        android:textColor="@color/colorWhite"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:padding="15dp"
        android:scaleType="center"
        android:textAlignment="center"
        android:text="@string/s_informacije"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name"
        tools:ignore="RtlCompat" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:rowCount="5"
        android:layout_weight="2"
        android:paddingTop="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="0dp"
        android:columnOrderPreserved="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_dialog_moreInfo_naziv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="5dp"
            android:text="@string/s_znamkaAED"
            android:textColor="@color/colorBlack"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/tv_dialog_moreInfo_naziv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorBlack"
            android:padding="5dp"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/tv_dialog_moreInfo_opis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/colorBlack"
            android:padding="5dp"
            android:text="@string/s_opisLokacije"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/tv_dialog_moreInfo_opis_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorBlack"
            android:padding="5dp"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/tv_dialog_moreInfo_telSt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/colorBlack"
            android:padding="5dp"
            android:text="@string/s_telefonskaStevilka"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/tv_dialog_moreInfo_telSt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorBlack"
            android:padding="5dp"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/tv_dialog_moreInfo_serijskaSt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/colorBlack"
            android:padding="5dp"
            android:text="@string/s_idStevilkaAed"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/tv_dialog_moreInfo_serijskaSt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorBlack"
            android:padding="5dp"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/tv_dialog_moreInfo_znamka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/colorBlack"
            android:padding="5dp"
            android:text="@string/s_znamkaAED"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/tv_dialog_moreInfo_znamka_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorBlack"
            android:padding="5dp"
            android:textSize="13dp" />
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_moreInfo_positiveButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="2dp"
            android:layout_margin="2dp"
            android:layout_gravity="center_horizontal"
            android:singleLine="true"
            android:textSize="14dp"
            android:textAlignment="center"
            android:text="@string/s_potrdi"
            android:gravity="center_vertical"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimaryDark"
            tools:ignore="RtlCompat" />

    </LinearLayout>
</LinearLayout>